# Quaanz

./: CMakeLists.txt
bloomberg-terminal/: .gitignore  CMakeLists.txt  README.md  demo.cast  firsttry.cast
bloomberg-terminal/include/: HighResChart.hpp  json_mini.hpp  terminal.hpp
bloomberg-terminal/scripts/: install.sh
bloomberg-terminal/src/: HighResChart.cpp  data.cpp  main.cpp
